Remove PermGen args + useless security